--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Space ships -- Fiction'
 - !lcsh 'Science fiction'
 - !lcsh 'Space flight -- Fiction'
+- GITenberg
 title: Spillthrough
 url: http://www.gutenberg.org/ebooks/32657
